Consistency with amd64.

--- a/riscv64/Makefile
+++ b/riscv64/Makefile
@@ -1,4 +1,4 @@
-LDFLAGS=--static -s -nostdlib -lgcc -Wl,--build-id=none
+LDFLAGS=-static -s -nostdlib -lgcc -Wl,--build-id=none -z noseparate-code
 
 hello: hello.o
 hello.o: hello.S
