--- a/ppc64el/Makefile
+++ b/ppc64el/Makefile
@@ -1,5 +1,5 @@
 ASFLAGS=-mregnames
-LDFLAGS=--static -s -nostdlib -lgcc -Wl,--build-id=none -z noseparate-code
+LDFLAGS=-static -s -nostdlib -lgcc -Wl,--build-id=none -z noseparate-code
 
 hello: hello.o
 hello.o: hello.S
